# dma-sim

./: CMakeLists.txt  README.md
include/dma/: descriptor.h  dma_simulator.h
src/: dma_simulator.cpp  main.cpp  ring_buffer.cpp  ring_buffer.h
